# Visual-Storytelling

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  demo.yaml
demo/: gradio_demo.py  streamlit_demo.py
notebooks/: visual_storytelling_demo.ipynb
scripts/: evaluate.py  quick_start.py  setup_dev.py  train.py
src/: __init__.py
src/eval/: __init__.py
src/models/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py
tests/: test_storytelling.py
